[package]
name = "alopecosa"
version = "0.1.0"
authors = ["danila.fomin <danila.fomin@corp.mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
rmp = "^0.8"
rmp-serde = "^0.15"
serde = { version = "1", features = [ "derive" ] }
num-traits = "0.2"
num-derive = "0.3"
derivative = "2"
