[package]
name = "alopecosa"
version = "0.1.0"
authors = ["danila.fomin <danila.fomin@corp.mail.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
rmp = "0.8"
rmp-serde = "0.15"
rmpv = "0.4"
serde = { version = "1", features = [ "derive" ] }
num-traits = "0.2"
num-derive = "0.3"
derivative = "2"
log = "0.4"
sha-1 = "0.9"
base64 = "0.13"
dashmap = "4"
